--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@
 </head>
 
 <body>
-    <div class="navebar">
+    <div class="nave">
         <div class="one">
-            <img src="./photos/phone.png" alt="" style="height: 25px; width: 25px;">
-            <span>+91 94261 05559</span>
-            <img src="./photos/Mail.png" alt="" style="height: 25px; width: 25px;">
+            <img src="./photos/phone.png" alt="" style="height: 25px; width: 25px;">&nbsp;&nbsp;
+            <span>+91 94261 05559</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./photos/Mail.png" alt="" style="height: 25px; width: 25px;">&nbsp;&nbsp;
             <span> bamokamnc@gmail.com</span>
         </div>
+        <div class="logo">
+            <img src="./photos/Facebook.png" alt="">&nbsp;&nbsp;
+            <img src="./photos/Twitter.png" alt="">&nbsp;&nbsp;
+            <img src="./photos/Instagram.png" alt="">&nbsp;&nbsp;
+            <img src="./photos/Linkedin.png" alt="">&nbsp;&nbsp;
+        </div>
+    </div>
+
+    <div class="navebar">
+        <img src="./photos/nav-brand.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Home</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>About Us</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Products</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Applications</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Packaging & Storage</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Quality Control</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Contact</span>
+    </div>
+
+    <div class="intro">
+        <img src="./photos/banner.png" alt="">
+        <h1>Bamoka Industries</h1>
     </div>
 </body>
 
