--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <span> bamokamnc@gmail.com</span>
         </div>
         <div class="logo">
-            <img src="./photos/Facebook.png" alt="">&nbsp;&nbsp;
-            <img src="./photos/Twitter.png" alt="">&nbsp;&nbsp;
-            <img src="./photos/Instagram.png" alt="">&nbsp;&nbsp;
-            <img src="./photos/Linkedin.png" alt="">&nbsp;&nbsp;
+            <img src="./photos/Facebook.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./photos/Twitter.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./photos/Instagram.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./photos/Linkedin.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
     </div>
 
@@ -37,7 +37,28 @@
 
     <div class="intro">
         <img src="./photos/banner.png" alt="">
-        <h1>Bamoka Industries</h1>
+        <div class="center">
+            <span class="name">Bamoka Industries</span>
+            <span class="manu">Manufacturer, Exporters and Supplier</span>
+            <a href="#" class="contact-us-btn">Contact Us</a>
+            <span class="ignite">IGNITE YOUR IMAGINATION</span>
+        </div>
+    </div>
+
+    <div class="container-1">
+        <div class="text">
+            <span class="wel">welcome</span>
+            <span class="to">To</span><br>
+            <span class="bamoka">Bamoka Industries</span><br>
+            <span class="we">We are the leading manufacturer and exporter of Guar Gum products, offering
+                <br>high-quality guar
+                refined spilt, guar meals, and guar gum powder. With our <br>extensive experience in the industry, we
+                strive to provide the best prices for our <br> valued customers while ensuring cost-effectiveness
+                without compromising on <br>quality. Explore our website to discover the various applications of guar
+                gum a <br> natural thickening agent and see how this incredible ingredient can enhance <br> your
+                products!
+            </span>
+        </div>
     </div>
 </body>
 
