Introducation and About us

--- a/index.html
+++ b/index.html
@@ -47,18 +47,79 @@
 
     <div class="container-1">
         <div class="text">
-            <span class="wel">welcome</span>
+            <span class="wel">Welcome</span>&nbsp;&nbsp;&nbsp;
             <span class="to">To</span><br>
-            <span class="bamoka">Bamoka Industries</span><br>
-            <span class="we">We are the leading manufacturer and exporter of Guar Gum products, offering
-                <br>high-quality guar
-                refined spilt, guar meals, and guar gum powder. With our <br>extensive experience in the industry, we
-                strive to provide the best prices for our <br> valued customers while ensuring cost-effectiveness
-                without compromising on <br>quality. Explore our website to discover the various applications of guar
-                gum a <br> natural thickening agent and see how this incredible ingredient can enhance <br> your
-                products!
+            <span class="bamoka">Bamoka Industries</span><br><br>
+            <span class="we">We are the leading manufacturer and exporter of Guar Gum products, offering <br>
+                high-quality guar refined spilt, guar meals, and guar gum powder. With our <br> extensive experience in
+                the industry, we strive to provide the best prices for our <br> valued customers while ensuring
+                cost-effectiveness without compromising on <br> quality. Explore our website to discover the various
+                applications of guar gum a <br>natural thickening agent and see how this incredible ingredient can
+                enhance <br> your products!
             </span>
         </div>
+        <img src="./photos/wel-farm.png" alt="">
+    </div>
+
+    <div class="container-2">
+        <img src="./photos/ab-guar.png" alt="">
+        <div class="text-2">
+            <div class="about-us">About Us</div>
+            <span class="bamoka">Bamoka Industries</span><br><br>
+            <span class="manufacturer">Manufacturers & Exporters of Guar Gum Powder, Guar refined <br> spilt & Guar
+                Meal</span><br><br>
+            <span class="we">We are the leading manufacturer and exporter of Guar Gum products, offering <br>
+                high-quality guar refined spilt, guar meals, and guar gum powder. With our <br>extensive experience in
+                the industry, we strive to provide the best prices for our <br>valued customers while ensuring
+                cost-effectiveness without compromising on <br>quality. Explore our website to discover the various
+                applications of guar gum a <br> natural thickening agent and see how this incredible ingredient can
+                enhance <br> your products!</span>
+        </div>
+    </div>
+
+    <div class="container-3">
+        <h2>Range Of Guar Gum Products</h2>
+        <div class="card-container">
+            <div class="card" style="background-image: url('./photos/slide1.png');">
+                <div class="card-text">
+                    <h3>Guar Protein (Churi and Korma)</h3>
+                    <p>Caesalpiniaceae belongs to the Leguminosae family and is popularly seen as a weed or wild crop
+                        that grows in tropical regions.</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url('./photos/slide2.png');">
+                <div class="card-text">
+                    <h3>Guar Gum Refined Split</h3>
+                    <p>Refined spilt generally contain galactose and mannose units. Along with carrageenan, these
+                        refined spilt form a gel and acts like thickeners.</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url('./photos/slide3.png');">
+                <div class="card-text">
+                    <h3>Fast Hydration Guar Gum</h3>
+                    <p>We are Manufacturers, Exporters, and Suppliers of an amazing Oil & Fast Hydration Guar Gum Powder
+                        in Gujarat, India.</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url('./photos/slide4.png');">
+                <div class="card-text">
+                    <h3>Food Grade Guar Gum</h3>
+                    <p>We are Manufacturers, Exporters, and Suppliers of an amazing Guar Gum Refined refined spilt in
+                        Gujarat, India.</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url('./photos/slide5.png');">
+                <div class="card-text">
+                    <h3>Industrial Grade Guar Gum</h3>
+                    <p>We are Manufacturers, Exporters, and Suppliers of an amazing Industrial Grade Guar Gum in
+                        Gujarat, India.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="big-logo">
+        <img src="./photos/bg-section-banner.png" alt="">
     </div>
 </body>
 
