Added Logo , Guar Products , application of gaur gum,

--- a/index.html
+++ b/index.html
@@ -119,8 +119,90 @@
     </div>
 
     <div class="big-logo">
-        <img src="./photos/bg-section-banner.png" alt="">
+        <img src="./photos/bg-section-banner.png" alt="" class="bg-mask">
+        <img src="./photos/home-mask-group.png" alt="" class="mask">
     </div>
+
+    <div class="container-3">
+        <h2>GUAR AND IT'S ALLIED PRODUCTS</h2>
+    </div>
+
+    <div class="card-container-2">
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Pods</h3>
+            <img src="./photos/ga-product1.png" alt="Guar Pods">
+        </div>
+
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Seed</h3>
+            <img src="./photos/ga-product2.png" alt="Guar Seed">
+        </div>
+
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Meal Korma</h3>
+            <img src="./photos/ga-product3.png" alt="Guar Meal Korma">
+        </div>
+
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Meal Churi</h3>
+            <img src="./photos/ga-product4.png" alt="Guar Meal Churi">
+        </div>
+
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Refined Split</h3>
+            <img src="./photos/ga-product5.png" alt="Guar Refined Split">
+        </div>
+
+        <div class="card-2">
+            <h3 class="card-title-2">Guar Gum Powder</h3>
+            <img src="./photos/ga-product6.png" alt="Guar Gum Powder">
+        </div>
+    </div>
+
+    <div class="container-3">
+        <h2>Industrial Applications of Guar Gum</h2>
+    </div>
+
+    <div class="main">
+        <div class="main-card">
+            <img src="./photos/img1.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img2.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img3.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img4.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img5.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img6.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img7.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img8.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img9.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img10.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img11.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+        <div class="main-card">
+            <img src="./photos/img1.png" alt="" style="height: 250px; width: 395px;">
+        </div>
+    </div>
+
+    
 </body>
 
 </html>
