--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
         </div>
     </div>
 
-    
+    <div class="container-4">
+        <img src="./photos/cp1.png" alt="">
+    </div>
 </body>
 
 </html>
