--- a/index.html
+++ b/index.html
@@ -198,13 +198,112 @@
             <img src="./photos/img11.png" alt="" style="height: 250px; width: 395px;">
         </div>
         <div class="main-card">
-            <img src="./photos/img1.png" alt="" style="height: 250px; width: 395px;">
+            <img src="./photos/img12.png" alt="" style="height: 250px; width: 395px;">
         </div>
     </div>
 
     <div class="container-4">
         <img src="./photos/cp1.png" alt="">
+        <div class="text-section">
+            <span class="why">WHY CHOOSE US</span><br><br>
+            <span class="we-are">We are Best In Industries</span><br><br>
+            <span class="cp-con">We serve our Customers with the best quality and consistency of our products, We
+                <br>have dedicated our skills, knowledge and experience combined with state-of-the-art <br>manufacturing
+                facility and committing necessary resources to R&D are values that <br> built up our Mission Statement
+                and Quality Policy.
+            </span><br><br>
+            <div class="list-container">
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    Customer Satisfaction is our Prime Moto
+                </div>
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    Supplying Best Quality and Consistent Product
+                </div>
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    Maintaining industry's best Hygiene Conditions
+                </div>
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    Sourcing of Top Quality Raw Material
+                </div>
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    Strong Supply Chain
+                </div>
+                <div class="list-item">
+                    <span class="tick">✔</span>
+                    On Time Delivery
+                </div>
+            </div>
+        </div>
     </div>
-</body>
 
+    <div class="container-3">
+        <h2>Certification</h2>
+    </div>
+
+    <div class="Certification">
+        <img src="./photos/logo1.png" alt="">
+        <img src="./photos/logo2.png" alt="">
+        <img src="./photos/logo3.png" alt="">
+        <img src="./photos/logo4.png" alt="">
+        <img src="./photos/logo5.png" alt="">
+    </div>
+
+    <div class="contact-section">
+        <h1 class="contact-title">GET IN TOUCH</h1>
+        <p class="contact-description">
+            Bamoka Industries is one of the most prominent Manufacturers, Exporters, <br>and Suppliers of an amazing
+            Guar Gum Powder in Navsari, Gujarat, India.
+        </p>
+        <form class="contact-form">
+            <div class="form-row">
+                <input type="text" placeholder="Name" class="form-input" />
+                <input type="email" placeholder="E-mail" class="form-input" />
+            </div>
+            <textarea placeholder="Comments" class="form-textarea"></textarea>
+            <button type="button" class="form-button">Send</button>
+        </form>
+    </div>
+
+    <div class="footer">
+        <div class="footer-upper">
+            <div class="footer-logo">
+                <img src="./photos/footer-brand.png" alt="Bamoka Industries Logo" class="logo-image" />
+                <div class="social">
+                    <img src="./photos/Facebook.png" alt="Facebook" class="social-logo" />
+                    <img src="./photos/Twitter.png" alt="Twitter" class="social-logo" />
+                    <img src="./photos/Instagram.png" alt="Instagram" class="social-logo" />
+                    <img src="./photos/LinkedIn.png" alt="LinkedIn" class="social-logo" />
+                </div>
+            </div>
+            <div class="footer-text">
+                <p><span>Home</span></p>
+                <p>About Us</p>
+                <p>Our Products</p>
+                <p>Applications</p>
+                <p>Packaging & Storage</p>
+                <p>Quality Control</p>
+                <p>Contact</p>
+            </div>
+            <div class="footer-contact">
+                <h3>Get In Touch</h3>
+                <p><strong>Head Office:</strong> U1 JD Complex, Aat Road, Eru, Navsari - 396445</p>
+                <p>
+                    <img src="./photos/phone.png" alt="Call Icon" class="contact-icon" /> +91 94261 05559
+                </p>
+                <p>
+                    <img src="./photos/Mail.png" alt="Mail Icon" class="contact-icon" /> bamokamnc@gmail.com
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>2024 Bamoka Industries. All Rights Reserved</p>
+        </div>
+    </div>
+
+</body>
 </html>
