Added Hovering Effect on Images and text of Footer

--- a/index.html
+++ b/index.html
@@ -164,41 +164,185 @@
     </div>
 
     <div class="main">
+
+        <!-- image-1 -->
         <div class="main-card">
-            <img src="./photos/img1.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img1.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Confectionary</p>
+                        <p class="para2">An invaluable ingredient in creating the desirable textures, flavors & stability of our favorite candies & treats.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-2 -->
         <div class="main-card">
-            <img src="./photos/img2.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img2.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Beverages</p>
+                        <p class="para2">Contributes to the texture, taste & shelf life of various beverages, enhancing the overall consumer experience.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-3 -->
         <div class="main-card">
-            <img src="./photos/img3.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img3.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Dairy Products</p>
+                        <p class="para2">Shaping the future of the Dairy Industry with the creation of high-quality, delicious, & sustainable dairy products.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-4 -->
         <div class="main-card">
-            <img src="./photos/img4.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img4.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Pharmaceuticals</p>
+                        <p class="para2">Plays a crucial role in the development, effectiveness & safety of medications.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-5 -->
         <div class="main-card">
-            <img src="./photos/img5.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img5.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Pet Food</p>
+                        <p class="para2">Creates delicious textures, health benefits & visual appeal of your Pet’s Food.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-6 -->
         <div class="main-card">
-            <img src="./photos/img6.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img6.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Ketchup & Pickles</p>
+                        <p class="para2">Invaluable tool for condiment manufacturers and acts as a secret sauce for various Ketchups, Pickles, Sauces, Dips, etc.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-7 -->
         <div class="main-card">
-            <img src="./photos/img7.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img7.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Mining & Construction</p>
+                        <p class="para2">Offers a unique combination of properties to the industrial sectors such as coating, shaping & binding of buildings, etc.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-8 -->
         <div class="main-card">
-            <img src="./photos/img8.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img8.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Tobacco Industry</p>
+                        <p class="para2">Increases the flavor & aroma of cigars, cigarettes, kreteks & gutka and is generally considered a safe substance for consuming.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-9 -->
         <div class="main-card">
-            <img src="./photos/img9.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img9.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Paper Industry</p>
+                        <p class="para2">Offers a range of benefits such as improving paper quality, increasing efficiency, & sustainability.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-10 -->
         <div class="main-card">
-            <img src="./photos/img10.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img10.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Oil Drilling</p>
+                        <p class="para2">Acts as an indispensable resource by ensuring efficient & effective resource extraction.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-11 -->
         <div class="main-card">
-            <img src="./photos/img11.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img11.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Textile Industry</p>
+                        <p class="para2">Enhances textile production & quality by acting as a binder, contributing to a smooth & creamy texture of fabrics.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- image-12 -->
         <div class="main-card">
-            <img src="./photos/img12.png" alt="" style="height: 250px; width: 395px;">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./photos/img12.png" alt="" style="height: 250px; width: 395px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="para1">Toothpaste</p>
+                        <p class="para2">Guar Gum can be effectively used in Toothpaste, Ointments & Conditioners to protect oral care routine.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
